# Real-Time-Multi-Object-Detection---Tracking-System

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  TECHNICAL_DESIGN_DOCUMENT.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start.py
config/: dataset.yaml  default.yaml  logging.yaml  training.yaml
datasets/coco128/: dataset.yaml  dataset_rtmodt.yaml
src/: __init__.py
src/detection/: detector.py
src/evaluation/: __init__.py  metrics.py
src/events/: __init__.py  zone_engine.py
src/ingestion/: __init__.py  rtsp_reader.py
src/profiling/: __init__.py  latency_profiler.py
src/tracking/: __init__.py  tracker.py
src/visualization/: renderer.py
tests/: __init__.py  test_web_api.py
tools/: deploy_to_hf.py  download_dataset.py  download_samples.py  export_model.py  run_pipeline.py  train.py
web/: index.html  server.py
web/static/: app.js  style.css
